--- a/README.Rmd
+++ b/README.Rmd
@@ -17,37 +17,15 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of bayesrules is to ...
+bayesrules is a package to supplement the Bayes Rules! book. It contains datasets and functions that are used in the book. Currently it is under development. It is current purpose is to supplement our teaching of Bayesian courses as we continue to write our book.
 
 ## Installation
 
-You can install the released version of bayesrules from [CRAN](https://CRAN.R-project.org) with:
+You can install the development version from Github. You would also need to install the devtools package if you do not have it installed already.
 
 ``` r
-install.packages("bayesrules")
+#install.packages("devtools") 
+install.packages("mdogucu/bayesrules")
 ```
 
-## Example
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(bayesrules)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
