--- a/vignettes/beta-binomial.Rmd
+++ b/vignettes/beta-binomial.Rmd
@@ -36,7 +36,7 @@ summarize_beta(alpha = 3, beta = 13)
 In addition `plot_binomial_likelihood()` helps users visualize the likelihood function and shows the maximum likelihood estimation.
 
 ```{r fig.align='center', fig.height=4, fig.width=5, message = FALSE}
-plot_binomial_likelihood(x = 3, n = 15, mle = TRUE)
+plot_binomial_likelihood(y = 3, n = 15, mle = TRUE)
 ```
 
 
@@ -46,7 +46,7 @@ plot_binomial_likelihood(x = 3, n = 15, mle = TRUE)
 The two other functions `plot_beta_binomial()` and `summarize_beta_binomial()` require both the prior parameters and the data for the likelihood. 
 
 ```{r fig.align='center', warning = FALSE, fig.height=4, fig.width=5}
-plot_beta_binomial(alpha = 3, beta = 13, x = 5, n = 10, 
+plot_beta_binomial(alpha = 3, beta = 13, y = 5, n = 10, 
                    prior = TRUE, #the default 
                    likelihood = TRUE,  #the default
                    posterior = TRUE #the default
