change the title of the vignette

--- a/vignettes/conjugate-families.Rmd
+++ b/vignettes/conjugate-families.Rmd
@@ -2,7 +2,7 @@
 title: "Conjugate Families"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{beta-binomial}
+  %\VignetteIndexEntry{Conjugate Families}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
