clean up readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-bayesrules is a package to supplement the Bayes Rules! book. It contains datasets and functions that are used in the book. Currently it is under development. It is current purpose is to supplement our teaching of Bayesian courses as we continue to write our book.
+**bayesrules** is a package to supplement the Bayes Rules! book. It contains datasets and functions that are used in the book. Currently it is under development.
+
 
 ## Installation
 
