--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-**bayesrules** is a package to supplement the Bayes Rules! book. It contains datasets and functions that are used in the book. Currently it is under development.
+**bayesrules** is a package to supplement the [Bayes Rules! book](https://www.bayesrulesbook.com/). It contains datasets and functions that are used in the book. Currently it is under development.
 
 
 ## Installation
