--- a/README.Rmd
+++ b/README.Rmd
@@ -15,10 +15,14 @@ knitr::opts_chunk$set(
 # bayesrules
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/bayes-rules/bayesrules/workflows/R-CMD-check/badge.svg)](https://github.com/bayes-rules/bayesrules/actions)
 <!-- badges: end -->
 
-**bayesrules** is a package to supplement the [Bayes Rules! book](https://www.bayesrulesbook.com/). It contains datasets and functions that are used in the book. Currently it is under development.
+**bayesrules** is a package to supplement the [Bayes Rules!
+book](https://www.bayesrulesbook.com/). It contains datasets and
+functions that are used in the book. You can find vignettes on the [package website](https://bayes-rules.github.io/bayesrules/docs/).
 
+<hr>
 
 ## Installation
 
@@ -26,7 +30,7 @@ You can install the development version from Github. You would also need to inst
 
 ``` r
 #install.packages("devtools") 
-devtools::install_github("mdogucu/bayesrules")
+devtools::install_github("bayes-rules/bayesrules")
 ```
 
 
