--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
   out.width = "80%"
 )
 ```
-# bayesrules <<img src="man/figures/bayes-rules-hex.png" align="right" alt="a hex shaped logo with shiny green-pink disco ball and purple starry background. There is text that says Bayes Rules!" width="120" />
+# bayesrules <img src="man/figures/bayes-rules-hex.png" align="right" alt="a hex shaped logo with shiny green-pink disco ball and purple starry background. There is text that says Bayes Rules!" width="120" />
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/bayes-rules/bayesrules/workflows/R-CMD-check/badge.svg)](https://github.com/bayes-rules/bayesrules/actions)
