update readme, pkgdown etc. about CRAN release.

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/bayes-rules/bayesrules/workflows/R-CMD-check/badge.svg)](https://github.com/bayes-rules/bayesrules/actions)
-
+[![CRAN status](https://www.r-pkg.org/badges/version/bayesrules)](https://cran.r-project.org/package=bayesrules)
 <!-- badges: end -->
 
 **bayesrules** is a package to supplement the [Bayes Rules!
@@ -26,6 +26,13 @@ functions that are used in the book. You can find vignettes on the [package webs
 <hr>
 
 ## Installation
+
+You can install bayesrules from CRAN. 
+
+``` r
+install.packages("bayesrules") 
+```
+
 
 You can install the development version from GitHub. You would also need to install the devtools package if you do not have it installed already.
 
